--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
-/* 231535 */
+
 ::-webkit-scrollbar {
     width: 5px;
 }
@@ -48,8 +48,7 @@ section .title{
     font-weight: 500;
     margin: 100px 0px;
     padding: 20px 0px;
-    /* margin-bottom: 60px;
-    padding-bottom: 20px; */
+    color: #111;
     font-family: 'Ubuntu', sans-serif;
 }
 section .title::before{
@@ -291,16 +290,35 @@ section .title::after{
     background: none;
 }
 
-/* .about .title::after{
-    content: "What are we upto";
-} */
+.card-p {
+    margin: 16px 0px;
+}
 
-.card-img{
+.card-btn {
+    background: #f99f37;
+    color: #fff;
+    font-size: 16px;
+    padding: 2px 12px;
+    margin-top: 50px;
+    font-weight: 400;
+    border-radius: 6px;
+    border: 2px solid #f99f37;
+    transition: all 0.3s ease;
+}
+
+.card-btn:hover{
+    color: #f99f37;
+    background: none;
+}
+
+/* .card-img{
 	max-width: 100%;
 }
 
 .ui-card{
-	width: 350px;
+    background: teal;
+    margin: 20px 120px;
+	width: 320px;
 	position: relative;
 	overflow: hidden;
 	transition: all 0.3s ease-out;
@@ -368,7 +386,7 @@ section .title::after{
 .ui-card:hover .description a{
 	opacity: 1;
 	transform: translateY(0px);
-}
+} */
 
 /******************************************************************************/
 
@@ -512,10 +530,15 @@ section .title::after{
 .top-title{
     color: #111;
 }
+.carousel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .teams .carousel .card{
-    /* background: #222; */
     border-radius: 6px;
     padding: 25px 35px;
+    margin: 0px 10px;
     text-align: center;
     overflow: hidden;
     transition: all 0.3s ease;
@@ -549,7 +572,7 @@ section .title::after{
 .teams .carousel .card:hover img{
     border-color: #fff;
 }
-.owl-dots{
+/* .owl-dots{
     text-align: center;
     margin-top: 20px;
 }
@@ -569,102 +592,27 @@ section .title::after{
 .owl-dot.active,
 .owl-dot:hover{
     background: #f99f37!important;
-}
+} */
 
 /*****************************************************************************************************************************/
 
-.contact .contact-content .column{
-    width: calc(50% - 30px);
-}
-.contact .contact-content .text{
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
-}
-.contact .contact-content .left p{
-    text-align: justify;
-}
-.contact .contact-content .left .icons{
-    margin: 10px 0;
-}
-.contact .contact-content .row{
-    display: flex;
-    height: 65px;
-    align-items: center;
-}
-.contact .contact-content .row .info{
-    margin-left: 30px;
-}
-.contact .contact-content .row i{
-    font-size: 25px;
-    color: #f99f37;
-}
-.contact .contact-content .info .head{
-    font-weight: 500;
-}
-.contact .contact-content .info .sub-title{
-    color: #333;
-}
-.contact .right form .fields{
-    display: flex;
-}
-.contact .right form .field,
-.contact .right form .fields .field{
-    height: 45px;
-    width: 100%;
-    margin-bottom: 15px;
-}
-.contact .right form .textarea{
-    height: 80px;
-    width: 100%;
-}
-.contact .right form .name{
-    margin-right: 10px;
-}
-.contact .right form .email{
-    margin-left: 10px;  
-}
-.contact .right form .field input,
-.contact .right form .textarea textarea{
-    height: 100%;
-    width: 100%;
-    border: 1px solid lightgrey;
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 17px;
-    font-family: 'Poppins', sans-serif;
-    transition: all 0.3s ease;
-}
-.contact .right form .field input:focus,
-.contact .right form .textarea textarea:focus{
-    border-color: #b3b3b3;
-}
-.contact .right form .textarea textarea{
-    padding-top: 10px;
-    resize: none;
-}
-.contact .right form .button{
-    height: 47px;
-    width: 170px;
-}
-.contact .right form .button button{
-    width: 100%;
-    height: 100%;
-    border: 2px solid #f99f37;
+.submit-btn{
     background: #f99f37;
     color: #fff;
-    outline: none;
     font-size: 20px;
     font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
     border-radius: 6px;
-    cursor: pointer;
+    border: 2px solid #f99f37;
     transition: all 0.3s ease;
 }
-.contact .right form .button button:hover{
+
+.submit-btn:hover{
     color: #f99f37;
     background: none;
 }
+
 .social{
     padding: 10px;
     font-size: 30px;
@@ -688,6 +636,8 @@ footer span a{
 footer span a:hover{
     text-decoration: underline;
 }
+
+
 
 @media (max-width: 1300px) {
     .home .max-width{
@@ -832,6 +782,9 @@ footer span a:hover{
     .slider-text{
         font-size: 30px;
     }
+    .carousel {
+        flex-direction: column;
+    }
 }
 
 @media (max-width: 620px) {
@@ -899,6 +852,25 @@ footer span a:hover{
     }
 }
 
+@media (max-width: 410px) {
+    .logo img {
+        width: 55px;
+        height: 55px;
+    }
+    .navbar .logo a{
+        font-size: 14px;
+    }
+    .home .home-content .text-1{
+        font-size: 20px;
+    }
+    .home .home-content .text-2{
+        font-size: 35px;
+    }
+    .home .home-content .text-3{
+        font-size: 10px;
+    }
+}
+
 @media (max-width: 390px) {
     .logo img {
         width: 55px;
@@ -911,7 +883,7 @@ footer span a:hover{
         font-size: 20px;
     }
     .home .home-content .text-2{
-        font-size: 34px;
+        font-size: 36px;
     }
     .home .home-content .text-3{
         font-size: 10px;
@@ -944,14 +916,8 @@ footer span a:hover{
     }
 }
 
-@media (max-width: 410px) {
-    .logo img {
-        width: 55px;
-        height: 55px;
-    }
-    .navbar .logo a{
-        font-size: 14px;
-    }
+@media (max-width: 320px) {
+    
     .home .home-content .text-1{
         font-size: 20px;
     }
@@ -959,6 +925,8 @@ footer span a:hover{
         font-size: 30px;
     }
     .home .home-content .text-3{
-        font-size: 8px;
+        font-size: 9px;
     }
+    
 }
+
