--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,9 +390,9 @@ section .title::after{
 
 /******************************************************************************/
 
-.about-new .title::after{
+/* .about-new .title::after{
     content: "Who are we";
-}
+} */
 .about .about-content .right{
     width: 100%;
     display: flex;
@@ -515,11 +515,70 @@ section .title::after{
     border: 2px solid #f99f37;
     transition: all 0.3s ease;
 }
-/* .gallery-btn:hover{
+.gallery-btn:hover{
     color: #f99f37;
     background: none;
-} */
+}
 
+/*******GALLERY PAGE********************/
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 40px 20px 0 20px;
+}
+
+.container .heading{
+  width: 50%;
+  padding-bottom: 50px;
+}
+.container .heading h3{
+  font-size: 3em;
+  font-weight: bolder;
+  padding-bottom: 10px;
+  border-bottom: 3px solid #222;
+}
+
+.container .heading h3 span{
+  font-weight: 100;
+}
+.container .box{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+}
+
+.container .box .dream{
+  display: flex;
+  flex-direction: column;
+  width: 32.5%;
+}
+
+.container .box .dream img{
+  width: 100%;
+  padding-bottom: 15px;
+  border-radius: 5px;
+}
+
+.image {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image h2 {
+    color: #fff;
+    position: absolute;
+    bottom: 10%;
+    font-size: 30px;
+    width: 100%;
+    padding: 20px auto; 
+    background-color: rgba(0,0,0,0.6);
+}
 
 
 /**********************************************************************************************/
@@ -545,6 +604,9 @@ section .title::after{
 }
 .teams .carousel .card:hover{
     background: #f99f37;
+}
+.teams .carousel .card:hover .social{
+    color: #111;
 }
 .teams .carousel .card .box{
     display: flex;
@@ -572,27 +634,10 @@ section .title::after{
 .teams .carousel .card:hover img{
     border-color: #fff;
 }
-/* .owl-dots{
-    text-align: center;
-    margin-top: 20px;
+
+.soc {
+    display: flex;
 }
-.owl-dot{
-    height: 13px;
-    width: 13px;
-    margin: 0 5px;
-    outline: none!important;
-    border-radius: 50%;
-    border: 2px solid #f99f37!important;
-    transition: all 0.3s ease;
-}
-.owl-dot.active{
-    width: 35px;
-    border-radius: 14px;
-}
-.owl-dot.active,
-.owl-dot:hover{
-    background: #f99f37!important;
-} */
 
 /*****************************************************************************************************************************/
 
@@ -637,11 +682,70 @@ footer span a:hover{
     text-decoration: underline;
 }
 
+/***************Upcomming Trips Page*********************/
+.trip .trip-content .left{
+    width: 45%;
+}
+.trip .trip-content .left img{
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 6px;
+}
+.trip .trip-content .right{
+    width: 55%;
+}
+.trip .trip-content .right .text{
+    font-size: 25px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.trip .trip-content .right .text span{
+    color: f99f37;
+}
+.trip .trip-content .right p{
+    text-align: justify;
+}
+.trip .trip-content .right a{
+    display: inline-block;
+    background: f99f37;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 30px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid #f99f37;
+    transition: all 0.3s ease;
+}
+.trip .trip-content .right a:hover{
+    color: f99f37;
+    background: none;
+}
+.trip-icons{
+    padding: 10px;
+}
+.trip-i{
+    margin: 10px;
+}
+.includes{
+    display: flex;
+    margin: 10px;
+}
+.exp-text{
+    padding-top: 30px;
+}
+.exp{
+    margin: 0px 5px;
+}
 
 
 @media (max-width: 1300px) {
     .home .max-width{
         margin-left: 0px;
+    }
+    .trip .trip-content .right{
+        width: 53%;
     }
 }
 
@@ -664,6 +768,12 @@ footer span a:hover{
     }
     .home .home-content .text-3{
         font-size: 20px;
+    }
+    .cards {
+        padding: 0px 100px;
+    }
+    .trip .trip-content .right{
+        width: 52%;
     }
     
 }
@@ -732,6 +842,9 @@ footer span a:hover{
     .slider-text{
         font-size: 40px;
     }
+    .cards {
+        padding: 0px 50px;
+    }
 }
 
 @media (max-width: 820px) {
@@ -756,6 +869,19 @@ footer span a:hover{
     }
     .ui-card {
         margin: 10px;
+    }
+    .cards {
+        padding: 0px 20px;
+    }
+}
+
+@media only screen and (max-width: 769px){
+    .container .box{
+    flex-direction: column;
+    }
+
+    .container .box .dream{
+    width: 100%;
     }
 }
 
@@ -787,6 +913,15 @@ footer span a:hover{
     }
 }
 
+@media only screen and (max-width: 643px){
+    .container .heading{
+    width: 100%;
+    }
+    .container .heading h3{
+    font-size: 1em;
+    }
+}
+
 @media (max-width: 620px) {
     .logo img {
         width: 70px;
@@ -815,7 +950,7 @@ footer span a:hover{
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 510px) {
     .logo img {
         width: 70px;
         height: 70px;
@@ -850,6 +985,14 @@ footer span a:hover{
         font-size: 23px;
         line-height: 38px;
     }
+    .cards {
+        padding: 0px 20px;
+    }
+    .trip-text h1{
+        font-size: 22px;
+    }
+    
+
 }
 
 @media (max-width: 410px) {
@@ -864,10 +1007,16 @@ footer span a:hover{
         font-size: 20px;
     }
     .home .home-content .text-2{
-        font-size: 35px;
+        font-size: 37px;
     }
     .home .home-content .text-3{
         font-size: 10px;
+    }
+    .cards {
+        padding: 0px 20px;
+    }
+    .trip-text h1{
+        font-size: 20px;
     }
 }
 
@@ -910,13 +1059,37 @@ footer span a:hover{
         font-size: 20px;
         line-height: 38px;
     }
-
     .ui-card {
         margin: 10px;
     }
+    .trip-text h1{
+        font-size: 18px;
+    }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 370px) {
+    .home .home-content .text-1{
+        font-size: 20px;
+    }
+    .home .home-content .text-2{
+        font-size: 32px;
+    }
+    .home .home-content .text-3{
+        font-size: 10px;
+    }
+    .home .home-content a{
+        padding: 6px 10px;
+        font-size: 14px;
+    }
+    .slider-text{
+        font-size: 14px;
+    }
+    .trip-text h1{
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 340px) {
     
     .home .home-content .text-1{
         font-size: 20px;
@@ -927,6 +1100,73 @@ footer span a:hover{
     .home .home-content .text-3{
         font-size: 9px;
     }
+    .trip-text h1{
+        font-size: 17px;
+    }
     
 }
 
+@media (max-width: 310px) {
+    
+    .home .home-content .text-1{
+        font-size: 18px;
+    }
+    .home .home-content .text-2{
+        font-size: 27px;
+    }
+    .home .home-content .text-3{
+        font-size: 8px;
+    }
+    .trip-text h1{
+        font-size: 14px;
+    }
+    
+}
+
+@media (max-width: 280px) {
+    
+    .home .home-content .text-1{
+        font-size: 18px;
+    }
+    .home .home-content .text-2{
+        font-size: 25px;
+    }
+    .home .home-content .text-3{
+        font-size: 7px;
+    }
+    .trip-text h1{
+        font-size: 13px;
+    }
+    
+}
+
+@media (max-width: 260px) {
+    
+    .home .home-content .text-1{
+        font-size: 16px;
+    }
+    .home .home-content .text-2{
+        font-size: 23px;
+    }
+    .home .home-content .text-3{
+        font-size: 7px;
+    }
+    
+}
+
+@media (max-width: 235px) {
+    
+    .home .home-content .text-1{
+        font-size: 14px;
+    }
+    .home .home-content .text-2{
+        font-size: 20px;
+    }
+    .home .home-content .text-3{
+        font-size: 6px;
+    }
+    .trip-text h1{
+        font-size: 11px;
+    }
+    
+}
